openshift/80-backend/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-api
    app.kubernetes.io/part-of: gbaia
  name: gbaia-backend
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: gbaia-backend
  type: ClusterIP
